--- a/app/src/main/res/layout/activity_donation_complete.xml
+++ b/app/src/main/res/layout/activity_donation_complete.xml
@@ -78,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:id="@+id/txvDonorName"
+                android:textColor="@color/red"
                 android:text="Om Parab"
                 android:textAlignment="center"
                 android:textSize="20sp"
